Download process fixes
* Adapt process to GS 2.4/ GT 10
* Add .gitignore